--- a/Is-This-Love/src/stylesheets/partials/_layout.scss
+++ b/Is-This-Love/src/stylesheets/partials/_layout.scss
@@ -9,6 +9,12 @@ html, body{
     box-sizing: border-box;
 }
 
+#particles-js{ 
+    position: absolute; 
+    height: 100%;
+    width: 100%;
+}
+
 .container{
     position: relative;
     top: 50%;
