--- a/Is-This-Love/src/stylesheets/partials/_layout.scss
+++ b/Is-This-Love/src/stylesheets/partials/_layout.scss
@@ -91,10 +91,17 @@ html, body{
     }
 }
 
+#analyser_render{
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    height: 30px;
+    background:none; 
+    float:left; 
+}
 
 .control-image{
     cursor: pointer;
-
     background-image: url('images/controls-sheet.png');
 }
 
