--- a/Sport-App/src/stylesheets/partials/_layout.scss
+++ b/Sport-App/src/stylesheets/partials/_layout.scss
@@ -1,11 +1,17 @@
 @import "bourbon";
 @import "neat";
+@import url(http://weloveiconfonts.com/api/?family=entypo);
+
+/* entypo */
+[class*="entypo-"]:before {
+  font-family: 'entypo', sans-serif;
+}
 
 html, body{
     width: 100%;
     height: 100%;
-
-    background:linear-gradient(135deg, #223D63, #30546E 75%, #636BA2)
+	font-family: "ProximaNova";
+    background:linear-gradient(135deg, #223D63, #30546E 65%, #636BA2)
 }
 
 *{
@@ -26,21 +32,104 @@ html, body{
 }
 
 .app{
-	background-color: silver;
 	height: 520px;
 }
 
 nav{
 	width: 100%;
 	height: 49px;
-	background-color: blue;
+	padding: 14px;
+	background-color: #465494;
 
 	h3{
 		margin: 0;
+		text-align: center;
+		text-transform: uppercase;
+		color: #576DB6;
+		font-weight: lighter;
+	}
+	
+	.hamburger{
+		width: 28px;
+		height: 28px;
+		float: left;
+		position: absolute;
+		margin-top: -3px;
+		color: #E7E9F1;
 	}
 }
-.hamburger{
-	width: 28px;
-	height: 28px;
-	float: left;
+
+.content{
+	width: 100%;
+	height: calc(100% - 49px);
+	padding: 7px;
+	background:linear-gradient(135deg, #7D77E5, #6DABF1);
+	overflow: hidden;
+
+	.card{
+		background-color: rgba(75, 75, 75, 0.25);
+		overflow: hidden;
+		margin-bottom: 7px;
+
+		header h3{
+		margin: 7px 0;
+		display: inline-block;
+		text-transform: uppercase;
+		font-weight: normal;
+		opacity: 0.5;
+		letter-spacing: 0.1em;
+		}
+	}
+
+	#card1{
+		header{
+			background:linear-gradient(90deg, #92DBCB, #9BD2F8);
+		}
+		
+		h1{
+			color: white;
+			text-align: center;
+			font-weight: 100;
+			margin: 7px 0;
+			letter-spacing: 0.1em;
+			font-size: 2.5em;
+		}
+	} 
+
+	#card2{
+		header{
+			background:linear-gradient(90deg, #FC9FC9, #D78AE8);
+		}
+
+		h2, .metrics{ 
+			display: inline-block;
+			width: 50%; 
+			float: left;
+		}
+
+		h2{
+			text-align: center;
+			color: white;
+			font-weight: 100;
+			line-height: 100%;
+
+			span{ font-weight: 500; }
+		}
+
+	}
+
+	#card3{
+		header{
+			background:linear-gradient(90deg, #FED0A6, #FEEBA8);
+		}			
+	} 
+
+	header{
+		border-radius: 3px;
+		box-shadow: 0px 3px 6px 0px rgba(88,98,173,1);
+	}
+
+	span{
+		color: white;
+	}
 }
